--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -60,7 +60,7 @@ jobs:
         sudo cp -a build.sh ${{ env.rootfs }}
         sudo cp -a repo/devtoolset-12.repo ${{ env.rootfs }}/etc/yum.repos.d
         sudo chroot ${{ env.rootfs }} /bin/bash /build.sh ${{ env.VERSION }}
-        mkdir out
+        mkdir -p out # Ensure the output directory exists
         sudo cp -a ${{ env.rootfs }}/node-v*.tar.* out
         sudo cp -a ${{ env.rootfs }}/sha256sum.txt out
 
